--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h2>Hello world</h2>
+<div class="class">
+    <h2>Hello world</h2>
+</div>
+
+<app-directives></app-directives>
+<app-emitter></app-emitter>
+<app-eventos></app-eventos>
+<app-first-component></app-first-component>
+<app-if-render></app-if-render>
+<app-parent-data></app-parent-data>
