--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+.class {
+    /*padding: 100px 0px 100px 0px;*/
+    width: 100%;
+    height: 100px;      
+    background-color: #f0f0f0;   
+    border: 1px solid blue;   
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+    text-align: center;
+}
