--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -1,1 +1,4 @@
-<p>eventos works!</p>
+<div class="class">
+    <p *ngIf="show">eventos</p>
+    <button (click)= "showMessage()">Clique aqui</button>
+</div>
