--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,1 +1,6 @@
-<p>parent-data works!</p>
+<div class="class">
+    <h1>Descrevendo usuario:</h1>
+    <p>Nome: {{ name }}</p>
+    <p>Email: {{ userData.email }}</p>
+    <p>Função do Usuario: {{ userData.role }}</p>
+</div>
