--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,15 @@
 * {
     margin: 0;
     padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    padding-bottom: 500px;
 }
 
 .class {
-    /*padding: 100px 0px 100px 0px;*/
-    width: 100%;
-    height: 100px;      
-    background-color: #f0f0f0;   
-    border: 1px solid blue;   
-    display: flex;
-    align-items: center;
-    justify-content: center;   
-    text-align: center;
+    border-bottom: 1px solid red;
+    padding: 2em;
+    margin-bottom: 1em;
 }
