Atualização de componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<div class="class">
-    <h2>Hello world</h2>
-</div>
+<h1>  HELLO WORD</h1>
 
-<app-directives></app-directives>
-<app-emitter></app-emitter>
-<app-eventos></app-eventos>
 <app-first-component></app-first-component>
+<app-parent-data [name]="userName" [userData]="userData" ></app-parent-data>
+<app-directives></app-directives>
 <app-if-render></app-if-render>
-<app-parent-data></app-parent-data>
+<app-eventos></app-eventos>
