--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
 <h1>  HELLO WORD</h1>
 
-<app-first-component></app-first-component>
-<app-parent-data [name]="userName" [userData]="userData" ></app-parent-data>
-<app-directives></app-directives>
-<app-if-render></app-if-render>
-<app-eventos></app-eventos>
-<app-emitter></app-emitter>
-<app-list-render></app-list-render>
-<app-pipes></app-pipes>
-<app-two-way-binding></app-two-way-binding>
+<router-outlet></router-outlet>
