--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>  HELLO WORD</h1>
-
+<nav class="navbar">
+    <div class="navbar-brand">
+      <a href="#">MyApp</a>
+    </div>
+    <ul class="navbar-nav">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="/list">List</a></li>
+      <li><a routerLink="/emitter">Emitter</a></li>
+    </ul>
+  </nav>
+  
 <router-outlet></router-outlet>
