alterações para iniciar projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <nav class="navbar">
-    <div class="navbar-brand">
+    <div class="navbar-logo">
       <a href="#">MyApp</a>
     </div>
     <ul class="navbar-nav">
       <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/list">List</a></li>
-      <li><a routerLink="/emitter">Emitter</a></li>
+      <li><a routerLink="/list">Usuários</a></li>
     </ul>
   </nav>
   
