--- a/src/app/components/list-render/list-render.component.html
+++ b/src/app/components/list-render/list-render.component.html
@@ -1,12 +1,15 @@
-<div class="class">
-    <h2>Animais</h2>
-    <ul>
-        <li *ngFor="let animal of animals">
-            nome: {{animal.name}}
-            tipo: {{animal.type}}
-            <button (click)="showAge(animal)">Show age</button>
-            <button (click)="removeAnimal(animal)">Excluir</button>
+<div>
+    <h2>Usuários</h2>
+    <br>
+    <ul class="listaUsuarios">
+        <li *ngFor="let usuario of users">
+            Nome: {{usuario.name}}
+            email: {{usuario.email}}
+            <div class="botao">
+                <button (click)="showPhone(usuario)">Mostrar Telefone</button>
+                <button (click)="removerUsuario(usuario)">Excluir</button>
+            </div>
         </li>
     </ul>
-    <h3> {{ animalDetails }}</h3>
+    <h3>{{ detalhesUsuarios }}</h3>
 </div>
