Area dos produtos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <ul class="navbar-nav">
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/list">Usuários</a></li>
+      <li><a routerLink="/product">Produtos</a></li>
     </ul>
   </nav>
   
